# cyberdog_tracking

./: CMakeLists.txt  README.md  package.xml
config/: camera_AI.yaml  extrinsics_ColorAI.yaml  extrinsics_LeftAI.yaml  k91_camera_AI.yaml  k91_extrinsics_ColorAI.yaml  k91_extrinsics_LeftAI.yaml
cyberdog_tracking/: CMakeLists.txt  package.xml
cyberdog_tracking/config/: params_intrinsic.yaml
cyberdog_tracking/include/cyberdog_tracking/: common_type.hpp  distance_filter.hpp  object_tracking.hpp
cyberdog_tracking/launch/: launch.py
cyberdog_tracking/src/: distance_filter.cpp  main.cpp  object_tracking.cpp
include/cyberdog_tracking/: common_type.hpp  distance_filter.hpp  object_tracking.hpp  transform.hpp
launch/: launch.py
src/: distance_filter.cpp  main.cpp  object_tracking.cpp  set_object.cpp  subscribe.cpp  transform.cpp
